4-virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-virtual-service
  namespace: argo
spec:
  hosts:
  - "tools.example.com"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /argo
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: argo-ui.argo.svc.cluster.local
